<resources>
    <string name="app_name">Baby Nursing</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name">Name</string>
    <string-array name="gender">
        <item>Girl</item>
        <item>Boy</item>
    </string-array>
    <string-array name="blood_type">
        <item></item>
        <item>A+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>O+</item>
        <item>A-</item>
        <item>B-</item>
        <item>AB-</item>
        <item>O-</item>
        <item>Unknown</item>
    </string-array>

    <string name="title_nursing_scrolling">Nursing</string>

    <!-- CG -->
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="string_edit_baby">Edit Baby</string>
    <string name="string_add_baby">Add Baby</string>
    <string name="string_emma">Emma</string>
    <string name="string_baby_info">Baby Info</string>
    <string name="string_birthdate">Birth Date</string>
    <string name="string_birthtime">Birth Time</string>
    <string name="string_gender">Gender</string>
    <string name="string_girl">Girl</string>
    <string name="string_boy">Boy</string>
    <string name="string_blood_info">Blood Info</string>
    <string name="string_birth_info">Birth Info</string>
    <string name="string_weight">Weight</string>
    <string name="string_length">Length</string>
    <string name="string_head_size">Head Size</string>
    <string name="string_birthplace">Birthplace</string>
    <string name="string_take_photo">Take Photo</string>
    <string name="string_choose_from_gallery">Choose from Gallery</string>
    <string name="add_pumping">Add</string>
    <string name="new_pumping">New Pumping</string>
    <string name="done">Done</string>
</resources>
