<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sevenlogics.babynursing.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen16"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            style="@style/headerTextViewStyle"
            android:text="@string/string_baby_info" />

        <TextView
            style="@style/subHeaderTextViewStyle"
            android:text="@string/string_birthdate" />

        <TextView
            android:id="@+id/txt_birthdate"
            style="@style/valueTextViewStyle" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen8" />

        <TextView
            style="@style/subHeaderTextViewStyle"
            android:text="@string/string_birthtime" />

        <TextView
            android:id="@+id/txt_birthtime"
            style="@style/valueTextViewStyle" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen8" />

        <TextView
            style="@style/subHeaderTextViewStyle"
            android:text="@string/string_gender" />

        <TextView
            android:id="@+id/txt_gender"
            style="@style/valueTextViewStyle" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen8" />

        <TextView
            style="@style/subHeaderTextViewStyle"
            android:text="@string/string_blood_info" />

        <TextView
            android:id="@+id/txt_blood_info"
            style="@style/valueTextViewStyle" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen16" />

        <TextView
            style="@style/headerTextViewStyle"
            android:text="@string/string_birth_info" />

        <TextView
            style="@style/subHeaderTextViewStyle"
            android:text="@string/string_weight" />

        <include
            android:id="@+id/layout_weight"
            layout="@layout/layout_et_txt" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen8" />

        <TextView
            style="@style/subHeaderTextViewStyle"
            android:text="@string/string_length" />

        <include
            android:id="@+id/layout_length"
            layout="@layout/layout_et_txt" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen8" />

        <TextView
            style="@style/subHeaderTextViewStyle"
            android:text="@string/string_head_size" />

        <include
            android:id="@+id/layout_head_size"
            layout="@layout/layout_et_txt" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen8" />

        <TextView
            style="@style/subHeaderTextViewStyle"
            android:text="@string/string_birthplace" />

        <TextView
            android:id="@+id/txt_birthplace"
            style="@style/valueTextViewStyle" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
